--- a/Site_Exemplo/index.html
+++ b/Site_Exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Hello, world!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ad repellendus recusandae voluptatibus facilis alias eligendi beatae soluta. Repudiandae maiores earum dolor voluptas corrupti! Vitae quasi quam iste dolorum ipsa!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ad repellendus recusandae voluptatibus facilis alias eligendi beatae soluta. Repudiandae maiores earum dolor voluptas corrupti! Vitae quasi quam iste dolorum ipsa!</p>
 </body>
 </html>
